# video-smart-downloader

./: .gitattributes  .gitignore  DEPLOYMENT.md  GITHUB_SETUP.md  ICONS.md  PLATFORMS.md  QUICKSTART.md  README.md  index.html  package.json  push-to-github.sh  tailwind.config.js  vite.config.ts  创建GitHub仓库步骤.md
.github/workflows/: build.yml
scripts/: README.md  build-mac.sh  build-windows.ps1  download-binaries.ps1  download-binaries.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
